Mon Mar 05 22:42:54 2001  Lee Mallabone <lee0@callnetuk.com>

        * gui/Makefile.am: Change shared directory for glade files
	  to allow centralised storage of all gdm .glade files.
	  Link gdmchooser against libglade.
	
	* gui/gdmconfig.c: Use new location for glade files.
	
	* gui/gdmchooser.c: Gladeify gdmchooser and give it a slightly
	  less sucky GUI.
	
	* gui/gdmchooser.glade, gui/gdmchooser-strings.c: Added GUI and
	  translatable strings for updated gdmchooser.
	  
	* gui/*.glade: Ensure WM_Class is set to be 'gdm' everywhere.
	
	* gdm.spec.in: Adjust paths for new glade file and location.

Sun Mar 04 16:28:52 2001  George Lebl <jirka@5z.com>

	* daemon/filecheck.[ch]: fix an error message and make const correct

	* gui/gdmlogin.c: make the photo checking code saner, this assumes
	  we're root and can read anyone's files, really and this is bad,
	  oh well, it is sort of weird.  Also a bunch of cleanup and
	  constization.

	* gui/Makefile.am: don't link to filecheck anymore

	* daemon/slave.c, gui/gdmlogin.c: cleanup some code, make GDM_QUIT
	  work for doing cleanup.  Make it not actually quit but just
	  cleanup to prepare to be killed.

Sun Mar 04 12:27:50 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: Added a note to the config file about running
	  X on a specific console.  Mostly for packagers, apparently the
	  debian packages were broken in this respect.

Sun Mar  4 16:13:55 2001  Lee Mallabone <lee0@callnetuk.com>

        * docs/gdmconfig/*: Added initial directory structure/files for
	the gdmconfig user guide. Not installed yet.
	
	* docs/gdmconfig/C/gdmconfig.sgml: Initial gdmconfig user guide
	content from Trevor Curtis <trevor.curtis@home.com>.

Wed Feb 28 19:23:42 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c:  Apply patch from "Matthias Clasen"
	  <Matthias.Clasen@poet.de>, to fix issues with xdm.

Web Feb 28 18:47:14 2001  Lee Mallabone <lee0@callnetuk.com>
