@@ -6,9 +6,6 @@ Keyboard layout menu.
 
 utmp/wtmp handling.
 
-RelaxPermissions is really an enum and gdmconfig will fuck it up
-if the user set it to '2'
-
 Default login for kiosks machines
   DefaultLogin=user
   DefaultLoginTimeout=30
