@@ -1,3 +1,11 @@
+Mon Mar 05 23:41:40 2001  Lee Mallabone <lee0@callnetuk.com>
+
+        * gui/gdmconfig.[ch]: Fix bug that caused only values of 0 and 1 for
+	  RelaxPerms to be used/written.
+
+	* gui/gdmconfig.glade: Change RelaxPerms toggle to 3 radio buttons,
+	  and remove some old cruft.
+
 Mon Mar 05 22:42:54 2001  Lee Mallabone <lee0@callnetuk.com>
 
         * gui/Makefile.am: Change shared directory for glade files
